--- a/main.css
+++ b/main.css
@@ -82,3 +82,74 @@
   border-bottom: 5px solid #1483C6;
   color: #474747 !important;
 }
+
+
+/*Switch form*/
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative !important;
+  display: inline-block !important;
+  width: 60px !important;
+  height: 34px !important;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
+}
+
+/* The slider */
+.slider {
+  position: absolute !important;
+  cursor: pointer !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  background-color: #ccc !important;
+  -webkit-transition: .4s !important;
+  transition: .4s !important;
+}
+
+#dagWeekText {
+  color: #CCCCCC !important;
+  margin: 10px 0px 0px 10px !important;
+}
+
+.slider:before {
+  position: absolute !important;
+  content: "" !important;
+  height: 26px !important;
+  width: 26px !important;
+  left: 4px !important;
+  bottom: 4px !important;
+  background-color: white !important;
+  -webkit-transition: .4s !important;
+  transition: .4s !important;
+}
+
+input:checked + .slider {
+  background-color: #2196F3 !important;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3 !important;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px) !important;
+  -ms-transform: translateX(26px) !important;
+  transform: translateX(26px) !important;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px !important;
+}
+
+.slider.round:before {
+  border-radius: 50% !important;
+}
