--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+html { 
+  margin-left: 250px !important; 
+  width: calc(100% - 250px) !important;
+}
+.tox .tox-dialog-wrap { left: 250px !important;}
 a {
   text-decoration: none;
   font-size: 16px !important;
