--- a/main.css
+++ b/main.css
@@ -207,3 +207,10 @@ input:checked + .slider:before {
   display: inline-block; 
   padding: 5px 8px;
 }
+
+.vacatureClass { padding-top: 20px; background: rgba(0,0,0,.1);}
+.vacatureClass span { display: inline-block; padding: 4px; line-height: 15px;text-transform: uppercase; font-size: 12px; }
+.vacatureClassDag { background: #000; color: #fff; font-weight: bold; padding-left: 7px; padding-right: 7px; }
+.vacatureClassCustomer { background: #6843A3; color: #fff; }
+.vacatureClassMarketing { background: #196EA3; color: #fff; }
+.vacatureClassCommunicatie { background: #019000; color: #fff; }
