--- a/main.css
+++ b/main.css
@@ -211,9 +211,9 @@ input:checked + .slider:before {
 #artikelenKleinContainerContent .titleKleinArtikel { font-size: 14px !important; line-height: 110% !important; font-weight: bold; }
 
 .categoryClass { padding-top: 20px; background: rgba(0,0,0,.1);}
-.categoryClass span { display: inline-block; padding: 4px; line-height: 15px;text-transform: uppercase; font-size: 11px; }
-.categoryClassDag { background: #000; color: #fff; font-weight: bold; padding-left: 7px; padding-right: 7px; }
-.categoryClassElement { border:1px solid rgba(0,0,0,.5)  }
+.categoryClass span { display: inline-block; padding: 4px 4px 2px; line-height: 15px;text-transform: uppercase; font-size: 11px; }
+.categoryClassDag { border:1px solid rgba(0,0,0,.5); background: #000; color: #fff; font-weight: bold; padding-left: 7px; padding-right: 7px; }
+.categoryClassElement { border:1px solid rgba(0,0,0,.5); background: rgba(255,255,255,.5);  }
 .categoryClassCustomer { background: #6843A3; color: #fff; }
 .categoryClassMarketing { background: #196EA3; color: #fff; }
 .categoryClassCommunicatie { background: #019000; color: #fff; }
