--- a/main.css
+++ b/main.css
@@ -218,7 +218,6 @@ input:checked + .slider:before {
 .categoryClassMarketing { background: #196EA3; color: #fff; }
 .categoryClassCommunicatie { background: #019000; color: #fff; }
 
-
-.slider.round:before { content:"D" !important; font-weight: bold; font-size: 16px; color: #333; text-align: center; line-height: 30px; }
-input:checked + .slider.round:before { content:"W" !important; color: #333; }
-#dagWeekText { display: none;}
+#dagWeekForm .slider.round:before { content:"D" !important; font-weight: bold; font-size: 16px; color: #333; text-align: center; line-height: 30px; }
+#dagWeekForm input:checked + .slider.round:before { content:"W" !important; color: #333; }
+#dagWeekForm  #dagWeekText { display: none;}
